<resources>
    <string name="app_name">DRAINIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_masuk">Masuk</string>
    <string name="login_akses">Akses Akun</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_sample_email">sample@email.com</string>
    <string name="login_password_hint">********</string>

    <!--bottom sheet-->
    <string name="btn_persistent">Persistent Bottom Sheet</string>
    <string name="btn_modal">Modal Bottom Sheet</string>
    <string name="tv_title_bottomsheet">Detail Drainase</string>
    <string name="tv_description_bottomsheet">
        A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
        some task in Android. Types of BottomSheet \n\nA BottomSheet is of two types: \n\nPersistent BottomSheet \n\nModal BottomSheet</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>

    <string-array name="TipePengaduan">
        <item>Titik Banjir</item>
        <item>Titik Tersumbat</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_detil_laporan">DetilLaporan</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="riwayat">Riwayat</string>
    <string name="tentang_kami">Pengelolaan pengaduan pelayanan publik di kota pekanbaru belum terkelola secara efektif dan terintegrasi, khususnya dalam hal permasalahan drainase. Pembangunan tol yang masif di Kota Pekanbaru dan sekitarnya, telah menimbulkan permasalahan yakni, menyempitnya ruang resapan air, banjir dan ditambah lagi dengan tingginya jumlah penduduk. Permasalahan ini sama seperti kota metropolitan lainnya, bak penyakit menahun yang tak kunjung sembuh. Keberadaan sampah di selokan tersebut turut andil memicu terjadinya banjir, lantaran tidak lancarnya aliran air di selokan. Hanya saja peran sampah sebagai pemicu banjir dapat diredam dengan budaya tertib membuang sampah. Namun, lain cerita dengan persoalan teknis drainase. Kota Pekanbaru memiliki tiga sungai utama sebagai tujuan akhir drainase, tiga sungai itu meliputi: Sungai Siak, Sungai Sail, dan Sungai Kampar. Menurut Iksan, jika drainase menuju ketiga sungai terpetakan, dan terintegrasi dengan baik, persoalan banjir dapat bekurang. Adapun kota Pekanbaru telah memiliki masterplan penanganan banjir yang didalamnya berisi pemetaan 180 titik banjir dengan ratusan masalah. </string>
    <string name="tentang_kami_2">Untuk itu pemerintah kota pekanbaru bekerja sama dengan Politeknik Caltex Riau membentuk aplikasi berbasis android bernama drainit. drainit adalah aplikasi layanan publik yang dapat digunakan masyarakat kota pekanbaru untuk melaporkan drainase yang tersumbat, drainase yang banjir, dan melihat titik banjir sehingga masyarakat dapat menghindari daerah tersebut. dengan adanya aplikasi ini diharapkan masyarakat kota pekanbaru turut andil dalam menangani permasalahan drainase yang ada di kota Pekanbaru.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="nama_jalan">Nama Jalan</string>
    <string name="koordinat">Koordinat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="daftar_titik_banjir_dan_tersumbat">Daftar Titik Banjir dan Tersumbat</string>
    <string name="pilih_jenis_laporan">Pilih Jenis Laporan</string>
    <string name="dialog_content">Silahkan pilih jenis laporan terlebih dahulu</string>
    <string name="ok">OK</string>
    <string name="default_info_title">default info title</string>
    <string name="default_info_snippet">default info snippet</string>
    <string name="pick_place">Pilih lokasi</string>
    <string name="titik_tersumbat">Titik Tersumbat</string>
    <string name="titik_banjir">Titik Banjir</string>
    <string name="lapor">Lapor</string>
    <string name="load_image_failed">load image failed</string>
    <string name="pilih_dari_peta">Pilih dari Peta</string>
    <string name="foto_lokasi">Foto Lokasi</string>
    <string name="tipe_pengaduan">Tipe Pengaduan: &#160;</string>
    <string name="name">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="email">Email</string>
    <string name="nomor_hp">Nomor Handphone</string>
</resources>