<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreyBackground">

    <RelativeLayout
        android:id="@+id/rl_login_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_login_masuk"
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen4x"
            android:text="@string/login_masuk"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_login_akses"
            style="@style/TextView.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login_masuk"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen3x"
            android:text="@string/login_akses"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_login_email"
        style="@style/TextView.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen4x"
        android:layout_marginTop="@dimen/dimen4x"
        android:text="@string/login_email"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_login_head" />

    <EditText
        android:id="@+id/et_login_email"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen3x"
        android:layout_marginTop="@dimen/dimen1x"
        android:autofillHints=""
        android:hint="@string/login_sample_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tv_login_email" />

    <TextView
        android:id="@+id/tv_login_password"
        style="@style/TextView.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen4x"
        android:layout_marginTop="@dimen/dimen1x"
        android:text="@string/login_password"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_email" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="@dimen/login_spacing_bottom">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_login_password_hint"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/et_login_password"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen3x"
        android:layout_marginTop="@dimen/dimen1x"
        android:autofillHints=""
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>