<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModelLaporan"
            type="com.azizapp.test.ui.laporan.LaporanViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/header"
        android:orientation="vertical"
        tools:context=".ui.laporan.LaporanFragment">

        <TextView
            android:id="@+id/tv_laporkan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/dimen_32"
            android:fontFamily="@font/poppins_bold"
            android:text="@={viewModelLaporan.tipe_pengaduan}"
            android:textColor="@color/textPrimary"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_rounded_top_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/scrollView">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_16"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/nama_jalan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_16"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_title_nama_jalan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="10dp"
                            android:drawablePadding="10dp"
                            android:text="@string/nama_jalan"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_nama_jalan"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:drawablePadding="10dp"
                            android:text="@string/pilih_dari_peta"
                            android:textColor="@color/textColorSecondary"
                            android:textSize="12dp"
                            app:layout_constraintEnd_toStartOf="@+id/imageView1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_title_nama_jalan" />

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_arrow_forward"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/textColorSecondary" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/koordinat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_16"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/nama_jalan">

                        <TextView
                            android:id="@+id/tv_title_koordinat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="10dp"
                            android:drawablePadding="10dp"
                            android:text="@string/koordinat"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_koordinat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:drawablePadding="10dp"
                            android:text="Lokasi belum dipilih"
                            android:textColor="@color/textColorSecondary"
                            android:textSize="12dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_title_koordinat" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/material_et_deskripsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/textColorSecondary"
                        android:textSize="16sp"
                        app:hintTextColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/koordinat">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextDeskripsi"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="31dp"
                            android:layout_marginTop="@dimen/dimen_16"
                            android:backgroundTint="@color/grey"
                            android:focusable="true"
                            android:gravity="start"
                            android:hint="@string/deskripsi"
                            android:inputType="textMultiLine"
                            android:lines="5"
                            android:text="@={viewModelLaporan.deskripsi}"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/foto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_16"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/material_et_deskripsi">

                        <TextView
                            android:id="@+id/tv_title_foto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="10dp"
                            android:drawablePadding="10dp"
                            android:text="@string/foto_lokasi"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/editGambar"
                            android:layout_width="292dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/grey"
                            android:ems="10"
                            android:inputType="text"
                            android:padding="10dp"
                            android:scaleType="centerInside"
                            android:src="@{viewModelLaporan.img}"
                            android:textSize="16sp"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_title_foto" />

                        <TextView
                            android:id="@+id/tv_pilih_dari_galeri"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:drawablePadding="10dp"
                            android:text="Pilih dari Galeri Anda"
                            android:textColor="@color/textColorSecondary"
                            android:textSize="12dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_title_foto" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_arrow_forward"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/textColorSecondary" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ProgressBar
                        android:id="@+id/pb_login_loading"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:visibility="@{viewModelLaporan.loadingEnable ? View.VISIBLE : View.GONE}"
                        app:layout_constraintBottom_toBottomOf="@id/buttonLapor"
                        app:layout_constraintEnd_toEndOf="@id/buttonLapor"
                        app:layout_constraintStart_toStartOf="@id/buttonLapor"
                        app:layout_constraintTop_toTopOf="@id/buttonLapor"
                        tools:visibility="visible" />

                    <Button
                        android:id="@+id/buttonLapor"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_marginHorizontal="31dp"
                        android:layout_marginTop="@dimen/dimen_16"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/lapor"
                        android:textAllCaps="true"
                        android:textColor="@color/textPrimary"
                        android:textSize="18sp"
                        android:visibility="@{viewModelLaporan.loadingEnable ? View.INVISIBLE : View.VISIBLE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/foto"
                        tools:ignore="MissingConstraints" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>